# bsnet

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
src/: CMakeLists.txt  NonCopyable.hpp  address.cpp  address.h  address.hpp  blocking_queue.hpp  buffer.cpp  buffer.h  buffer.hpp  bytebuffer.cpp  bytebuffer.hpp  event.hpp  eventedfd.cpp  eventedfd.hpp  neterr.cpp  neterr.hpp  poller.hpp  poller_epoll.cpp  poller_epoll.hpp  poller_poll.hpp  registration.cpp  registration.hpp  ringbuf.hpp  tcp_listener.cpp  tcp_listener.hpp  tcp_stream.cpp  tcp_stream.h  tcp_stream.hpp  token.cpp  token.hpp  utility.hpp
src/deprecated/: poller_poll.cpp
test/: CMakeLists.txt  echo.cpp  main.cpp  test_addr.cpp  test_buffer.cpp  test_event.cpp  test_main.cpp  test_registration.cpp  test_tcp.cpp  test_token.cpp
