add_library(libbsnet
        address.cpp
        address.hpp
        tcp_stream.hpp
        buffer.hpp
        buffer.cpp
        tcp_listener.hpp
        tcp_stream.cpp
        event.hpp
        blocking_queue.hpp
        NonCopyable.hpp
        poller_poll.cpp
        poller_poll.hpp
        poller.hpp
        poller_epoll.hpp
        poller_epoll.cpp)
